# telecan

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bootstrap  configure.ac  notes.org
cmake/Modules/: FindSampleRate.cmake
lib/: Makefile.am
src/: Makefile.am  base_analyzer.cc  base_analyzer.h  channel_detect.cc  channel_detect.h  helper_functions.cc  helper_functions.h  telecom_analyzer.cc
src/device/: circular_buffer.cc  circular_buffer.h  hackrf.cc  hackrf.h
src/dsp/: fractional_resampler.cc  fractional_resampler.h
src/gsm/: analyzer.cc  analyzer.h  burst_counter.cc  burst_counter.h  constants.h  decoder.cc  decoder.h  parser.cc  parser.h  sequence_estimator.cc  sequence_estimator.h  viterbi_detector.cc  viterbi_detector.h
src/gsm/state_machine/: base.cc  base.h  burst.cc  burst.h  find_fcch.cc  find_fcch.h  state.h  synchronize.cc  synchronize.h
src/lte/: analyzer.cc  analyzer.h
src/umts/: analyzer.cc  analyzer.h
test/: burst_counter.cc  correlation_data.h  helper_functions.cc  parser.cc
thesis/: .gitignore  Makefile  Thesis.tex  install.sh  notes.org
thesis/bibliography/: Bibliography.bib
thesis/chapters/: Conclusion.tex  Design.tex  Evaluation.tex  FutureWork.tex  GSM.tex  Implementation.tex  Introduction.tex  ProjectProcess.tex  RelatedWork.tex  SignalProcessing.tex  SoftwareDefinedRadio.tex
thesis/figures/plots/: gaussian.plt  gaussian.tex  gsm_fcch_burst_phase_diff.plt  gsm_fcch_burst_phase_diff.tex  gsm_fcch_pure_tone.plt  gsm_fcch_pure_tone.tex
thesis/frontmatter/: Acknowledgements.tex  Acronyms.tex  Preface.tex  Summary.tex
thesis/preamble/: etc.tex  fonts.tex  general.tex  static.tex
thesis/prefrontmatter/: colophon.tex  titlepage.tex
