noinst_LIBRARIES = libkalibrate-hackrf.a
libkalibrate_hackrf_a_SOURCES = \
   kalibrate-hackrf/src/arfcn_freq.cc \
   kalibrate-hackrf/src/c0_detect.cc	 \
   kalibrate-hackrf/src/circular_buffer.cc \
   kalibrate-hackrf/src/fcch_detector.cc \
   kalibrate-hackrf/src/offset.cc \
   kalibrate-hackrf/src/usrp_source.cc \
   kalibrate-hackrf/src/util.cc\
   kalibrate-hackrf/src/arfcn_freq.h \
   kalibrate-hackrf/src/c0_detect.h \
   kalibrate-hackrf/src/circular_buffer.h \
   kalibrate-hackrf/src/fcch_detector.h \
   kalibrate-hackrf/src/offset.h \
   kalibrate-hackrf/src/usrp_complex.h \
   kalibrate-hackrf/src/usrp_source.h \
   kalibrate-hackrf/src/util.h\
   kalibrate-hackrf/src/version.h

libkalibrate_hackrf_a_CXXFLAGS = $(FFTW3_CFLAGS) $(LIBHACKRF_CFLAGS)
